--- a/views/home.ejs
+++ b/views/home.ejs
@@ -118,7 +118,7 @@
 </div>
 
   <script>
-     var announcements = '<%-JSON.stringify(announcements)%>';
+     var announcements = '<%-JSON.stringify(events)-%>';
   </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
