--- a/views/home.ejs
+++ b/views/home.ejs
@@ -117,6 +117,29 @@
 
 </div>
 
+   <!-- Footer -->
+   <div class="footer">
+    <div class="swcfirst">
+      <img
+        src="https://cdn.discordapp.com/icons/700582407048396810/b323eb7828b87b9b7d5e07db8670efc5.png?size=128"
+        alt="swc_icon"
+        width="70px"
+        height="70px"
+      />
+      <div class="swcfoot">
+        <h5><a href="#">Student Affairs Section IIT Guwahati |</a></h5>
+        <div class="swc">
+          <h9>© 2021 SWC —</h9>
+          <h10><a href="#">@swciitg</a></h10>
+        </div>
+      </div>
+    </div>
+    <div class="icons">
+      <a href="#"><i class="fa fa-facebook fa-xm"></i></a>
+      <a href="#"><i class="fa fa-linkedin square fa-xm"></i></a>
+    </div>
+  </div>
+
   <script>
      var announcements = '<%-JSON.stringify(events)-%>';
   </script>
