--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,19 @@
 <html>
-
-<head>
-  <title>Rights & Responsibility</title>
-  <link rel="stylesheet" href="./css/styleHome.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-
-  <style></style>
-</head>
+  <head>
+    <title>Welfare Board |</title>
+    <link rel="stylesheet" href="./css/styleHome.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <style></style>
+  </head>
 <body>
     <div class="header">
         <span class="logo">
@@ -33,16 +39,16 @@
   </div>
 
   <!-- slide show -->
-  <!-- <div class="slideshow-container">
+  <div class="slideshow-container">
   <div class="mySlides1">
     <img src="./images/slides1.jpg" style="width: 100%" />
   </div>
 
   <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
-</div> -->
+</div>
 
-<img src="./images/slides1.jpg" alt="Italian Trulli">
+
 
 
 
@@ -141,7 +147,7 @@
   </div>
 
   <script>
-     var announcements = '<%-JSON.stringify(events)-%>';
+     var announcements = '<%-JSON.stringify(announcements)-%>';
   </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
